[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/img/circle.svg" type="Texture" id=1]
[ext_resource path="res://assets/img/circle_pressed.svg" type="Texture" id=2]
[ext_resource path="res://assets/img/triangle.svg" type="Texture" id=3]
[ext_resource path="res://assets/img/square_pressed.svg" type="Texture" id=4]
[ext_resource path="res://assets/img/square.svg" type="Texture" id=5]
[ext_resource path="res://assets/img/triangle_pressed.svg" type="Texture" id=6]
[ext_resource path="res://scenes/shapes_buttongroup.tres" type="ButtonGroup" id=7]
[ext_resource path="res://scenes/hud.gd" type="Script" id=8]
[ext_resource path="res://assets/img/retry.svg" type="Texture" id=9]
[ext_resource path="res://assets/img/back.svg" type="Texture" id=10]
[ext_resource path="res://assets/img/triangle_disabled.svg" type="Texture" id=11]
[ext_resource path="res://assets/img/circle_disabled.svg" type="Texture" id=12]
[ext_resource path="res://assets/img/square_disabled.svg" type="Texture" id=13]
[ext_resource path="res://assets/fonts/outlined.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/fonts/Montserrat-Light.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/img/back_pressed.svg" type="Texture" id=17]
[ext_resource path="res://assets/img/retry_pressed.svg" type="Texture" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 0.313726 )
shadow_size = 3
shadow_offset = Vector2( 3, 3 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.145098, 1 )
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0745098, 0.462745, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="LevelLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 1.0
margin_right = 63.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 14 )
text = "Level: X"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = 13.0
margin_right = 108.0
margin_bottom = 85.0
custom_styles/panel = SubResource( 1 )

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 17.0
margin_right = 700.0
margin_bottom = 273.0
grow_horizontal = 2
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
alignment = 1

[node name="CircleButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 12.0
margin_right = 268.0
margin_bottom = 256.0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 12 )

[node name="CircleCountLabel" type="Label" parent="ButtonContainer/CircleButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -39.5
margin_right = -30.0
margin_bottom = -18.5
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 14 )
text = "999"
align = 1
valign = 1

[node name="SquareButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 272.0
margin_right = 528.0
margin_bottom = 256.0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 13 )

[node name="SquareCountLabel" type="Label" parent="ButtonContainer/SquareButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -39.5
margin_right = -30.0
margin_bottom = -18.5
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 14 )
text = "999"
align = 1
valign = 1

[node name="TriangleButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 532.0
margin_right = 788.0
margin_bottom = 256.0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
group = ExtResource( 7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 11 )

[node name="TriangleCountLabel" type="Label" parent="ButtonContainer/TriangleButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = -30.0
margin_bottom = -19.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 14 )
text = "999"
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 87.0
margin_bottom = 87.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 17 )
stretch_mode = 4

[node name="RetryButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 24.0
margin_right = 7.0
margin_bottom = 87.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 18 )
stretch_mode = 4

[node name="DoneContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -42.5
margin_right = 71.5
margin_bottom = 42.5
alignment = 1

[node name="Label" type="Label" parent="DoneContainer"]
margin_right = 143.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Done!"

[node name="NextLevelButton" type="Button" parent="DoneContainer"]
margin_top = 64.0
margin_right = 143.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.145098, 0.145098, 0.145098, 1 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Next level"

[connection signal="pressed" from="ButtonContainer/CircleButton" to="." method="_on_CircleButton_pressed"]
[connection signal="pressed" from="ButtonContainer/SquareButton" to="." method="_on_RectangleButton_pressed"]
[connection signal="pressed" from="ButtonContainer/TriangleButton" to="." method="_on_TriangleButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="DoneContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
